# 666

./: README.md
bumblebee/: CMakeLists.txt  mainpage.dox  manifest.xml
bumblebee/launch/: unit_test.launch
bumblebee/src/: publisher.cpp  stereopsis.cpp  tester.cpp  transport2.h
controller/: CMakeLists.txt  manifest.xml
controller/data/: curve.txt
controller/launch/: unit_test.launch
controller/simulator/model/: model.sdf
controller/simulator/plugins/: state.cc
controller/src/: control.cpp  tester.cpp
lane_detection/: CMakeLists.txt  mainpage.dox  manifest.xml
lane_detection/launch/: callback.launch  unit_test.launch
lane_detection/src/: callback.cpp  coloredge.cpp  lane_detection.cpp
local_planner/: CMakeLists.txt  manifest.xml
local_planner/include/road_navigation/: clothoid.hpp  path.hpp  road_navigation.hpp  state.hpp  trajectory.hpp
local_planner/launch/: free_navigation.launch  freeform_navigation.unit_test.launch  road_launch.launch  road_navigation.unit_test.launch
local_planner/lib/sbpl/: sbpl.pc
local_planner/src/: Make_traj.h  clothoid.cpp  clothoid.hpp  free_navigation.cpp  free_navigation_tester.cpp  header.hpp  join.py  local_planner.cpp  path.hpp  planner.cpp  road_navigation.cpp  road_navigation.hpp  state.cpp  test.cpp  trajectory.h  trajectory.hpp
local_planner/src/freeform_navigation/: freeform_navigation.cpp  freeform_navigation_tester.cpp
local_planner/src/local_planner/srv/: _MapUpdate.py  __init__.py
local_planner/src/road_navigation/: clothoid.cpp  road_navigation.cpp  road_navigation_tester.cpp  state.cpp
local_planner/srv/: MapUpdate.srv
logitech/: CMakeLists.txt  mainpage.dox  manifest.xml
logitech/launch/: unit_test.launch
logitech/src/: camera.cpp  left_camera.cpp  right_camera.cpp
perception/: stack.xml
perception/road_detection/: mainpage.dox  manifest.xml
perception/road_detection/include/perception/road_detection/: Classifier.h  Classifier.hpp  Feature.hpp  FeatureExtractor.hpp  Preprocessor.hpp  RoadDetector.h  RoadDetector.hpp
perception/road_detection/src/perception/road_detection/: RoadDetector.cpp  RoadDetector.cpp~
vehicle_description/: mainpage.dox  manifest.xml
